# worldcup-oracle

./: .gitignore  DESIGN_SKILLS.md  Makefile  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: capture-odds.yml
data/: oracle.duckdb
docs/: BETTING_THESIS_ENGINE.md  DATA_PROVIDER_STRATEGY.md  FEATURE_STORE_BLUEPRINT.md  FINAL_BLUEPRINT.md  FOOTBALL_KNOWLEDGE_ENGINE.md  MATCHUP_ENGINE_BLUEPRINT.md  RED_TEAM_AUDIT.md
frontend/: package-lock.json  package.json  tsconfig.json
oracle/: __init__.py  db.py  teams.py
oracle/betting/: explain.py  (+4 more)
scripts/: export_artifacts.py
tests/: conftest.py  test_archetype_calibration.py  test_artifacts.py  test_betting_explain.py  test_betting_markets.py  test_betting_pipeline.py  test_betting_signals.py  test_blend.py  test_bracket_builder.py  test_bracket_exports.py  test_bracket_paths.py  test_bracket_pipeline.py  test_calibration.py  test_calibration_history.py  test_capture.py  test_cards_intelligence.py  test_chain_calibration.py  test_closing_lines_pipeline.py  test_corners_intelligence.py  test_data_sources.py  test_dc.py  test_dc_goals.py  test_decay.py  test_devig.py  test_edge_confidence.py  test_elo.py  test_fixtures.py  test_forecast.py  test_grading_ledger.py  test_grading_metrics.py  test_grading_pipelines.py  test_knowledge_calibration_pipeline.py  test_knowledge_calibration_schema.py  test_knowledge_chains.py  test_knowledge_evidence.py  test_knowledge_explain.py  test_knowledge_learning_history.py  test_knowledge_learning_pipeline.py  test_knowledge_learning_schema.py  test_knowledge_learning_scoring.py  (+41 more)
(+302 files in other folders)
