[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldcup-oracle"
version = "0.1.0"
description = "Honest 2026 World Cup forecaster — honesty harness first"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "numpy>=1.26.0",
    "penaltyblog>=1.11.0",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

# Week 2+ additions (install then, not now):
# penaltyblog  — Dixon-Coles, de-vig, RPS, backtesting
# soccerdata   — FBref / ClubElo scrapers
# lightgbm     — ensemble member (sparingly)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["oracle"]
